# tab-ledger

./: .gitignore  DATA_SPEC.md  HANDOFF.md  KNOWLEDGE_BASE_HANDOFF.md  LICENSE  README.md  cc_indexer.py  com.rileycoyote.tab-ledger.plist  kb_auxiliary.py  kb_build.py  kb_indexer.py  kb_linker.py  kb_mcp_server.py  kb_memory.py  kb_query.py  kb_schema.py  kb_semantic.py  kb_summarizer.py  kb_taxonomy.py  pyproject.toml  requirements.txt  run_kb_refresh.py  run_snapshot.py  server.py  snapshot.py  tab-ledger-infographic.html
docs/: index.html  setup.html
src/tab_ledger/: __init__.py  __main__.py  _paths.py  categorizer.py  cc_indexer.py  cli.py  kb_auxiliary.py  kb_build.py  kb_indexer.py  kb_linker.py  kb_mcp_server.py  kb_query.py  kb_schema.py  kb_semantic.py  kb_summarizer.py  kb_taxonomy.py  run_kb_refresh.py  run_snapshot.py  server.py  snapshot.py
static/: styles.css
templates/: index.html
tests/: test_kb_hardening.py  test_kb_semantic_memory.py
